# T_First

./: BitmapPlusPlus.hpp  CMakeLists.txt  Hit_Result.h  LoadObject.h  README.md  TriangleMesh.h  main.cpp  ray.h  vec3.h
